add the HTML content

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -81,43 +81,299 @@
           </div>
         </div>
       </header>
-      <section>
-        <h2>Request a fast quote today</h2>
-        <div>
-          We are industry leaders providing quality plumbing, draingage, hot
-          water, and rooting-related services to our Community of Customers.
-          We're ready to assist you with all your needs. From routine
-          maintenance to emergency repairs and quality installation, we have you
-          covered.
-        </div>
-        <div>
+      <main>
+        <section>
+          <h2>Request a fast quote today</h2>
+          <p>
+            We are industry leaders providing quality plumbing, draingage, hot
+            water, and rooting-related services to our Community of Customers.
+            We're ready to assist you with all your needs. From routine
+            maintenance to emergency repairs and quality installation, we have
+            you covered.
+          </p>
           <div>
+            <div>
+              <ul>
+                <li>$0</li>
+                <li>No call out fees*</li>
+              </ul>
+            </div>
+            <div>
+              <img src="src/images/phone-hand.png" />
+            </div>
+          </div>
+          <div class="enquiry">
+            <div>
+              <h3>Describe your plumbing requirement to get a quote</h3>
+              <h5>Your information is 100% safe and secure</h5>
+              <h5>You will receive a response within minutes</h5>
+            </div>
+            <form>
+              <input type="name" placeholder="Name" />
+              <input type="number" placeholder="Phone number" />
+              <input type="email" placeholder="Email Address" />
+              <input type="text" placeholder="Suburb" />
+              <input type="text" placeholder="Service Type:" />
+              <input type="text" placeholder="Describe your plumbing job" />
+              <input type="submit" value="Get a free quote" />
+            </form>
+          </div>
+          <div>
+            <div>$50 <span>off</span></div>
+            <div>When you book online</div>
+          </div>
+        </section>
+        <section>
+          <h3>Plumbing services we offer</h3>
+          <p>
+            We are industry leaders providing quality plumbing, drainage, hot
+            water, and rooting-related services to our Community of Customers.
+          </p>
+
+          <div class="grid">
+            <div class="card">
+              <div>Blocked Drains</div>
+            </div>
+            <div class="card">
+              <div>Hot Water</div>
+            </div>
+            <div class="card">
+              <div>Leaking Pipes</div>
+            </div>
+            <div class="card">
+              <div>Gas Fiting</div>
+            </div>
+            <div class="card">
+              <div>Leaking Taps</div>
+            </div>
+            <div class="card">
+              <div>Pipe Relining</div>
+            </div>
+            <div class="card">
+              <div>Blocked Drains</div>
+            </div>
+            Leaking Toliets
+          </div>
+          <div class="card">
+            <div>Leaking Detection</div>
+          </div>
+          <div>
+            <h4>We use well known brands including:</h4>
             <ul>
-              <li>$0</li>
-              <li>No call out fees*</li>
+              <li><img src="src/images/vulcan.jpg" /></li>
+              <li><img src="src/images/thermann.png" /></li>
+              <li><img src="src/images/parisi.jpg" /></li>
+              <li><img src="src/images/grohe.png" /></li>
+              <li><img src="src/images/DUX.jpg" /></li>
+              <li><img src="src/images/aquamax.jpg" /></li>
+              <li><img src="src/images/rheem.png" /></li>
             </ul>
           </div>
           <div>
-            <img src="src/images/phone-hand.png" />
+            <div><h3>Get a free onsite quote</h3></div>
+            <div>
+              <ul>
+                <li>1300 000 000</li>
+                <li>Get a free quote</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="enquiry">
+        </section>
+        <section>
           <div>
-            <h3>Describe your plumbing requirement to get a quote</h3>
-            <div>Your information is 100% safe and secure</div>
-            <div>You will receive a response within minutes</div>
+            <h2>What we deliver</h2>
+            <p>
+              As a family-owned business, we take immense pride in offering a
+              24/7 Service that sets is apart from the rest. With a focys on
+              transparency and customer convience, we believe in keeping things
+              simple and hassle-free for our valued customers. That's why we
+              proudly offer a $0 callout, upfront pricing & Lifetime labour
+              warranty, ensuring that you know exactly what is expect right from
+              the start.
+            </p>
           </div>
+          <div>
+            <div>
+              <h4>Lifetime labour warranty</h4>
+              <p>
+                We pride ourselves on our workmanship and gurantee our service.
+              </p>
+            </div>
+            <div>
+              <h4>Fully licensed & insured</h4>
+              <p>
+                Our professionals are reliable and provide compliance
+                certificates to your peace of mind.
+              </p>
+            </div>
+            <div>
+              <img
+                src="src/images/I-am-a-plumber-–-what-do-I-need-in-my-business-terms-and-conditions1.webp"
+              />
+            </div>
+          </div>
+        </section>
+        <section>
+          <div>
+            <div class="logo"></div>
+            <div>
+              <h3>Ask about our payment plans</h3>
+              <h2>Repair now, Pay later</h2>
+            </div>
+            <div>
+              <ul>
+                <li>1300 000 000</li>
+                <li>Get a free quote</li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <div>
+              <div><h3>01</h3></div>
+              <div>
+                <h4>Do it now</h4>
+                <p>Big job or little jobs, repaired today</p>
+              </div>
+            </div>
+            <div>
+              <div><h3>02</h3></div>
+              <div>
+                <h4>Pay later</h4>
+                <p>Big job or little jobs, repaired today</p>
+              </div>
+              <div>
+                <div><h3>03</h3></div>
+                <div>
+                  <h4>No interest ever</h4>
+                  <p>Talk to us to find out more</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <h3>Plumber sydney <span>faqs</span></h3>
+              <p>
+                We are industry leaders providing quality, drainage, hot water,
+                and roofing-related services to our Community of Customers.
+                We're ready to assist you with all your needs, From routine
+                maintenance to emergency repairs and quality installations, we
+                have you covered.
+              </p>
+            </div>
+            <div>
+              <ul>
+                <li>What type of services do you offer</li>
+                <li>How do I schedule an appointment</li>
+                <li>What areas do you service></li>
+                <li>Do you provide emergency plumbing services?</li>
+                <li>How do you charge for your service?</li>
+                <li>Are you licensed and insured?</li>
+              </ul>
+            </div>
+            <div>
+              <div>1300 000 000</div>
+              <div>Get a free quote</div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div>
+            <div class="logo">Logo</div>
+            \
+            <h3>
+              At the end of the day, our goal is simple: to provide reliable,
+              exceptional plumbing services that exceed expectations.
+            </h3>
+            <p>
+              This dedication to customer satifaction, along with our experience
+              and technical expertise, is what sets us apart.<br />
+              Get started today with <a>plumbing example</a>
+            </p>
+          </div>
+        </section>
+        <section>
+          <h3>What our clients say.</h3>
+          <div>
+            <div><h4>John Smith</h4></div>
+            <div>This placeholder text</div>
+            <div></div>
+            <h4>Abbotsfords</h4>
+          </div>
+          <div>
+            <div><h4>John Smith</h4></div>
+            <div>This placeholder text</div>
+            <div></div>
+            <h4>Five Dock</h4>
+          </div>
+          <div>
+            <div><h4>John Smith</h4></div>
+            <div>This placeholder text</div>
+            <div></div>
+            <h4>Ultimo</h4>
+          </div>
+        </section>
+        <section>
+          <h3>Book a plumber near you</h3>
           <form>
-            <input type="name" placeholder="Name" />
-            <input type="number" placeholder="Phone number" />
-            <input type="email" placeholder="Email Address" />
+            <input type="name" placeholder="Full Name*" />
+            <input type="number" placeholder="Phone number*" />
+            <input type="email" placeholder="Email Address*" />
             <input type="text" placeholder="Suburb" />
             <input type="text" placeholder="Service Type:" />
-            <input type="text" placeholder="Describe your plumbing job" />
+            <input type="text" placeholder="Date & Time" />
+            <input type="text" placeholder="Additional information" />
             <input type="submit" value="Get a free quote" />
           </form>
-        </div>
-      </section>
+          <div>
+            <h5>Your information is 100% safe and secure</h5>
+            <h5>You will receive a response within minutes</h5>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
+  <footer>
+    <div>
+      <div class="logo">Logo</div>
+      <div>
+        <div>
+          <h3>Services</h3>
+          <ul>
+            <li>Blocked Drains</li>
+            <li>Hot Water</li>
+            <li>Repairs & Maintenance</li>
+            <li>View All Services</li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h3>Quick links</h3>
+          <ul>
+            <li>Services</li>
+            <li>About us</li>
+            <li>FAQ</li>
+          </ul>
+        </div>
+        <div>
+          <div>
+            <h3>Contact us</h3>
+            <ul>
+              <li>P: 1300 000 000</li>
+              <li>E: info@plumber.com.au</li>
+            </ul>
+            <div>Get a free quote</div>
+          </div>
+        </div>
+      </div>
+      <div></div>
+      <div>
+        <p>
+          © 2023 . All rights reserved. Here’s our Terms and Conditions and
+          Privacy Policy.
+        </p>
+      </div>
+    </div>
+  </footer>
 </html>
